--- a/index.css
+++ b/index.css
@@ -1,21 +1,34 @@
 html {
-    color: white;
-    background-color: black;
     font-family: Helvetica, sans-serif;
 }
 
 body {
     border: 1px solid greenyellow;
+    color: white;
+    background-color: black;
     margin: 0;
     padding: 0;
 }
 
 #myVideo {
-  width: 100vw;
-  height: 500;
+  width: 100%;
+  height: 700px;
   object-fit: cover;
   position: absolute;
-  top: 70px;
+  top: 0px;
+  z-index: -2;
+}
+
+.video-overlay {
+  position: absolute;
+  width: 100%;
+  height: 700px;
+  top: 0;
+  background: linear-gradient(
+    to top,
+    rgb(0, 0, 0),
+    rgba(0, 0, 0, 0)
+  );
   z-index: -1;
 }
 
@@ -40,6 +53,10 @@ header {
     border-right: 1px solid white;
 }
 
+.header-nav a:hover {
+  color: #777;
+}
+
 .header-nav a:last-child {
     border: none;
 }
@@ -61,7 +78,7 @@ header {
     align-items: center;
     justify-content: center;
     border-radius: 160px;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0);
     transition: all 0.3s ease;
 }
 
@@ -218,16 +235,6 @@ margin-left: -20px;
   transition: all 1s ease-out;
 }
 
-footer{
-  padding: .24rem 0 .75rem;
-  font-size: .75rem;
-  position: absolute;
-  bottom: 0;
-}
-footer a {
-  color: rgba(255,135,240,1);
-}
-
 .dA, .twit, .git {
   opacity: 0;
 }
@@ -334,7 +341,18 @@ article {
   justify-content: space-around;
   box-sizing: border-box;
   padding-left: 0.7rem;
-  font-weight: bold;
+  font-size: 1.9rem;
+}
+
+.raiting {
+  display: flex;
+  align-items: center;
+}
+
+.episode {
+  font-size: 50px;
+  margin-right: -25px;
+  margin-left: 38px;
 }
 
 h1 {
@@ -348,7 +366,6 @@ h1 {
   padding: 6px 7px 4px 7px;
   border-radius: 0.2rem;
   background-color: red;
-  font-weight: bold;
 }
 
 article div {
@@ -361,7 +378,6 @@ article div {
   padding: 10px 16px 10px 16px;
   border-radius: 0.2rem;
   font-size: 20px;
-  font-weight: bold;
 }
 
 .ply-btn:hover {
@@ -371,21 +387,22 @@ article div {
 /* article section */
 
 /* main section */
-h2 {
+
+
+main h2 {
     margin: 0;
     padding: 0;
 }
 
-p {
+main p {
     margin: 0;
     padding: 0;
 }
 
 .movie {
     color: rgb(255, 255, 255);
-    font-weight: bold;
-    width: 320px;
-    height: 220px;
+    min-width: 320px;
+    min-height: 220px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -407,9 +424,222 @@ p {
     border-color: black;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+}
+
+main .step {
+display: flex;
+flex-direction: column;
+margin-top: 30;
+}
+
+.movies {
+  overflow: auto;
+}
+
+.select {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 10px;
+}
+
+.movies {
+  display: flex;
+  gap: 2rem;
+  overflow: hidden;
+  margin-left: 10px;
+}
+
+.movies:hover {
+  overflow-x: scroll;
+}
+
 /* main section */
 
 /* footer section */
+footer {
+  margin-top: 70px;
+  padding-top: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #1d1c1c;
+  bottom: 0;
+  box-sizing: border-box;
+}
+
+.last-icon {
+  display: flex;
+  flex-direction: row;
+  font-size: 20px;
+  width: 100%;
+  padding-left: 60;
+}
+
+.last-icon i {
+  padding-right: 30px;
+}
+
+.last-icon i:hover {
+  color: gray;
+}
+
+.last-nav {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.last-nav nav {
+  display: flex;
+  flex-direction: column;
+  margin: 20 20;
+}
+
+.last-nav nav a {
+  text-decoration: none;
+  padding-bottom: 20;
+  color: #9b9b9b;
+}
+
+.last-nav nav a:hover {
+  color: white;
+}
+
+.hzm {
+  width: 100%;
+}
+
+.hzm .hizmet {
+  width: fit-content;
+  color: #9b9b9b;
+  border: 1px solid #9b9b9b;
+  padding: 7px;
+  margin: -5px 0 0 20px;
+}
+
+.hzm .business {
+  width: fit-content;
+  color: #9b9b9b;
+  padding: 7px;
+  margin: 10 0 0 20px;
+  font-size: 14px;
+}
+
+.hzm .hizmet:hover {
+  color: white;
+  border-color: white;
+}
+
+    /* Contact */
+
+    .tooltip-container {
+      height: 70px;
+      width: 110px;
+      border-radius: 5px;
+      background-color: #fff;
+      background-image: linear-gradient(
+        to left bottom,
+        #f2f5f8,
+        #ecf1f2,
+        #e7eceb,
+        #e3e7e4,
+        #e1e2de
+      );
+      border: 1px solid white;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.151);
+      position: relative;
+      transition: transform 0.3s ease;
+      z-index: 1;
+    }
+    
+    .tooltip-container::before {
+      position: absolute;
+      content: "";
+      top: -50%;
+      clip-path: polygon(50% 0, 0 100%, 100% 100%);
+      border-radius: 5px;
+      background-color: fff;
+      background-image: linear-gradient(
+        to left bottom,
+        #1288ff,
+        #e4eaec,
+        #d8dfde,
+        #cdd3cf,
+        #c5c7c1
+      );
+      width: 100%;
+      height: 50%;
+      transform-style: preserve-3d;
+      transform: perspective(1000px) rotateX(-150deg) translateY(-110%);
+      transition: transform 0.3s ease;
+      z-index: -1;
+    }
+    
+    .tooltip-container .info {
+      color: rgb(32, 30, 30);
+      font-weight: bold;
+      font-size: 10px;
+    }
+    
+    .tooltip {
+      position: absolute;
+      top: -20px;
+      opacity: 0;
+      background: linear-gradient(-90deg, rgba(0, 0, 0, 0.05) 1px, white 1px),
+        linear-gradient(rgba(0, 0, 0, 0.05) 1px, white 1px),
+        linear-gradient(-90deg, rgba(0, 0, 0, 0.04) 1px, white 1px),
+        linear-gradient(rgba(0, 0, 0, 0.04) 1px, white 1px),
+        linear-gradient(white 3px, #f2f2f2 3px, #f2f2f2 78px, white 78px),
+        linear-gradient(-90deg, #aaa 1px, white 1px),
+        linear-gradient(-90deg, white 3px, #f2f2f2 3px, #f2f2f2 78px, white 78px),
+        linear-gradient(#aaa 1px, white 1px), #f2f2f2;
+      background-size: 4px 4px, 4px 4px, 80px 80px, 80px 80px, 80px 80px, 80px 80px,
+        80px 80px, 80px 80px;
+      padding: 5px 10px;
+      border: 1px solid rgb(206, 204, 204);
+    
+      height: 70px;
+      width: 300px;
+      border-radius: 5px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition-duration: 0.2s;
+      pointer-events: none;
+      letter-spacing: 0.5px;
+      font-size: 18px;
+      font-weight: 600;
+      text-shadow: 10px salmon;
+      z-index: -1;
+      color: #1d1c1c;
+    }
+    .tooltip-container:hover {
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+    
+    .tooltip-container:hover::before {
+      transform: rotateY(0);
+      background-image: none;
+      background-color: rgb(241, 12, 12);
+    }
+    
+    .tooltip-container:hover .tooltip {
+      top: -90px;
+      opacity: 1;
+      transition-duration: 0.3s;
+    }
+
+  /* Contact */
 
 /* footer section */
 
@@ -636,4 +866,47 @@ p {
     }
     /* HEADER */
 
+}
+
+@media (max-width: 768px) {
+  /* HEADER */
+
+footer .last-nav a{
+ display: none;
+}
+
+.tooltip-container {
+    display: flex;
+    margin-bottom: 40;
+}
+
+footer .last-icon {
+    display: flex;
+    justify-content: center;
+    padding: 0 0 0 30px;
+    margin-bottom: -10;
+}
+
+footer .hzm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.hzm .business {
+  margin-left: 0;
+  margin-top: 25;
+}
+
+.hzm .hizmet {
+  margin: 0;
+}
+
+.footer-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* HEADER*/
 }
