--- a/index.css
+++ b/index.css
@@ -341,7 +341,6 @@ article {
   justify-content: space-around;
   box-sizing: border-box;
   padding-left: 0.7rem;
-  font-size: 1.9rem;
 }
 
 .raiting {
@@ -349,10 +348,15 @@ article {
   align-items: center;
 }
 
+.epi {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 .episode {
   font-size: 50px;
-  margin-right: -25px;
-  margin-left: 38px;
+  margin-right: 10px;
 }
 
 h1 {
@@ -373,6 +377,196 @@ article div {
   gap: 2rem;
 }
 
+/* MORE İNFO */
+.about {
+  position: fixed;
+  z-index: 10;
+  bottom: 10px;
+  right: 10px;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  transition: all 0.2s ease;
+}
+
+.about .bg_links {
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(5px);
+  position: absolute;
+}
+
+.about .logo {
+  width: 40px;
+  height: 40px;
+  z-index: 9;
+  background-image: url(https://rafaelalucas91.github.io/assets/codepen/logo_white.svg);
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: 10px 7px;
+  opacity: 0.9;
+  transition: all 1s 0.2s ease;
+  bottom: 0;
+  right: 0;
+}
+
+.about .social {
+  opacity: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.about .social .icon {
+  width: 100%;
+  height: 100%;
+  background-size: 20px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: transparent;
+  display: flex;
+  transition: all 0.2s ease, background-color 0.4s ease;
+  opacity: 0;
+  border-radius: 100%;
+}
+
+.about:hover {
+  width: 105px;
+  height: 105px;
+  transition: all 0.6s cubic-bezier(0.64, 0.01, 0.07, 1.65);
+}
+
+.about:hover .logo {
+  opacity: 1;
+  transition: all 0.6s ease;
+}
+
+.about:hover .social {
+  opacity: 1;
+}
+
+.about:hover .social .icon {
+  opacity: 0.9;
+}
+
+.about:hover .social:hover {
+  background-size: 28px;
+}
+
+.about:hover .social .icon:hover {
+  background-size: 65%;
+  opacity: 1;
+}
+
+.about .social.portfolio {
+  transition: all 0.8s ease;
+}
+
+.about .social.portfolio .icon {
+  background-image: url(https://rafaelalucas91.github.io/assets/codepen/link.svg);
+}
+
+.about .social.portfolio .icon:hover {
+  background-color: #698fb7;
+}
+
+.about .social.dribbble {
+  transition: all 0.3s ease;
+}
+
+.about .social.dribbble .icon {
+  background-image: url(https://rafaelalucas91.github.io/assets/codepen/dribbble.svg);
+}
+
+.about .social.dribbble .icon:hover {
+  background-color: #ea4c89;
+}
+
+.about .social.linkedin {
+  transition: all 0.8s ease;
+}
+
+.about .social.linkedin .icon {
+  background-image: url(https://rafaelalucas91.github.io/assets/codepen/linkedin.svg);
+}
+
+.about .social.linkedin .icon:hover {
+  background-color: #0077b5;
+}
+
+@m-00: #ffc964;
+
+.butn {
+  min-width: 160px;
+  width: fit-content;
+  width: -moz-fit-content;
+  background-color: white;
+  padding: 0 30px;
+  height: 50px;
+  font-family: "Open Sans", sans-serif;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: red;
+  letter-spacing: 2.8px;
+  font-weight: 700;
+  line-height: 1.6;
+  box-shadow: 0 15px 40px -10px rgba(0, 0, 0, 0.3);
+  position: relative;
+  transition: all 0.4s ease;
+  cursor: pointer;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+}
+
+.butn span {
+  z-index: 1;
+  text-align: center;
+}
+
+.butn:before,
+.butn:after {
+  content: "";
+  position: absolute;
+  width: 4px;
+  height: 100%;
+  top: 0;
+  transition: all 0.4s ease;
+  background-color: red;
+}
+
+.butn:before {
+  left: 0;
+}
+
+.butn:after {
+  right: 0;
+}
+
+.butn:hover {
+  box-shadow: 0 8px 20px -12px rgba(0, 0, 0, 0.2);
+  letter-spacing: 2px;
+  color: white;
+}
+
+.butn:hover:before,
+.butn:hover:after {
+  width: 51%;
+}
+
+.change {
+  display: none;
+}
+/* MORE İNFO */
 .ply-btn {
   border: none;
   padding: 10px 16px 10px 16px;
@@ -643,6 +837,18 @@ footer {
 
 /* footer section */
 
+@media (max-width: 1180px) {
+  .pool {
+    display: none;
+  }
+
+  .change {
+    display: block;
+  }
+
+
+}
+
 @media (max-width: 950px) {
     /* HEADER */
 
@@ -869,6 +1075,22 @@ footer {
 }
 
 @media (max-width: 768px) {
+  /* ARTİCLE */
+  article .raiting .age {
+    margin: 0;
+  }
+
+  article .raiting .time {
+    margin: 0;
+  }
+  article .raiting {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+  }
+  /* ARTİCLE */
+
   /* HEADER */
 
 footer .last-nav a{
@@ -907,6 +1129,7 @@ footer .hzm {
   flex-direction: column;
   align-items: center;
 }
+
 
 /* HEADER*/
 }
